--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,456 @@
 @charset "utf-8";
-html{
-}
-body{
-}
+
+html {}
+
+body {}
+
 /* header */
-header{
-    background:#186AC9;
+header {
+    background-color: #186AC9;
+    padding: 15px;
 }
 
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+/* .btn {
+    margin: 20px 0;
+} */
+
+
+.btn a {
+    color: #fff;
+}
+
+/* head */
+#head {
+    display: flex;
+    align-items: center;
+}
+
+#head h1 img {
+    display: block;
+    width: 100px;
+    margin: auto;
+
+}
+
+#user {
+    display: flex;
+    align-items: center;
+    margin: 0 0 0 auto;
+    position: relative;
+}
+
+#user-top {
+    display: flex;
+}
+
+#user-top p {
+    color: #fff;
+    text-align: center;
+}
+
+.accordion_btn {
+    width: 16px;
+    height: 16px;
+    margin: 0 20px;
+    background-image: url("../images/arrow.png");
+    cursor: pointer;
+}
+
+.accordion_btn.open {
+    background-image: url("../images/arrow-up.png");
+}
+
+
+
 /* main content */
-#row{
+#row {
     display: flex;
     flex-flow: row wrap;
 }
-#container{
+
+#container {
     flex: 0 0 80%;
+    position: relative;
 }
-#side-bar{
-    flex: 0 0 19%;
+
+#side-bar {
+    width: 100%;
+    flex: 0 0 20%;
     border-left: 1px solid #727272;
+}
+
+
+body {
+    /* width: 100px;
+    height: 100px; */
+    margin: 0 auto;
+}
+
+/*サイドバー*/
+#confirm {
+    width: 100%;
+    border-bottom: 1px solid #727272;
+    padding: 20px;
+}
+
+#confirm div {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 50px 20px 0;
+}
+
+.btn {
+    margin-left: 45%;
+    width: 150px;
+    white-space: nowrap;
+}
+
+#side-bar button {
+    display: block;
+    width: 50%;
+    margin: 40px auto;
+
+}
+
+/*　投稿フォーム　*/
+.container {
+    max-width: 100%;
+    margin: 0 0 10px 0;
+    padding: 0;
+}
+
+.post_container,
+.follow_container {
+    display: flex;
+    border-bottom: 6px solid #dadada;
+    padding: 20px 20px 20px 50px;
+}
+
+.post_text {
+    border: none;
+    width: 80%;
+    margin-left: 15px;
+    margin-top: 20px;
+}
+
+.post_text::placeholder {
+    color: #ececec;
+    font-size: 1.1rem;
+}
+
+/* 投稿ボタン */
+.submit_btn {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: auto;
+    margin-left: 10px;
+}
+
+
+/* 投稿一覧 */
+.posts_container li {
+    padding: 20px 20px 20px 80px;
+    border-bottom: 1px solid #777;
+}
+
+.post_block {
+    display: flex;
+    width: 100%;
+}
+
+.post_content {
+    width: 100%;
+    padding-left: 15px;
+}
+
+.post_content>div {
+    /*クラス名post_contentの直下のdivタグのみに適用*/
+    display: flex;
+    justify-content: space-between;
+}
+
+.post_name {
+    margin-bottom: 15px;
+}
+
+/* formテキストエリアに入力した改行を表示させる方法 */
+.post_list {
+    white-space: pre-wrap;
+}
+
+/* 投稿の編集・削除ボタン */
+.post_option {
+    display: flex;
+    margin-left: auto;
+}
+
+.btn_edit,
+.btn_trash {
+    padding: 0 10px;
+    cursor: pointer;
+}
+
+.btn_edit img {
+    display: block;
+    width: 40px;
+    height: 40px;
+}
+
+.btn_trash a {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background: url("../images/trash.png") no-repeat;
+    background-size: 100%;
+
+}
+
+.btn_trash a:hover {
+    background: url("../images/trash-h.png");
+    background-size: 100%;
+}
+
+/* 投稿の編集モーダル画面 */
+.modal {
+    display: none;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.modal__bg {
+    background: rgba(0, 0, 0, 0.8);
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+}
+
+.modal__content {
+    background: #fff;
+    left: 50%;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 60%;
+}
+
+.modal_post {
+    width: 100%;
+    height: 200px;
+    border-color: #777;
+}
+
+.update_btn {
+    width: 40px;
+    height: 40px;
+    margin-top: 20px;
+
+}
+
+/* アコーディオンメニュー実装 */
+.accordion_container {
+    display: flex;
+    display: none;
+    border: 1px solid #000985;
+    background: #fff;
+    position: absolute;
+    top: 120%;
+    right: 0;
+    width: 200px;
+}
+
+/* .accordion_container li {} */
+
+.accordion_container li a {
+    display: block;
+    color: #727272;
+    cursor: pointer;
+    padding: 20px 0;
+    text-align: center;
+}
+
+.accordion_container ul li a:hover {
+    color: #fff;
+    background-color: #000985;
+}
+
+
+/* プロフィール編集画面 */
+.profile_container {
+    display: flex;
+    width: 80%;
+    margin: 50px auto;
+    /* width: 100%;
+    padding: 50px 200px; */
+}
+
+.profile_update {
+    width: 100%;
+}
+
+.update_form {
+    margin-left: 30px;
+
+}
+
+.update_form :first-child {
+    margin-top: 10px;
+}
+
+.update_block {
+    display: flex;
+    margin-top: 40px;
+    justify-content: space-between;
+}
+
+.update_block input {
+    width: 60%;
+    background: #eee;
+    border: 1px solid #aaa;
+    padding: 5px;
+}
+
+#file_button {
+    display: none;
+}
+
+.update_image {
+    width: 60%;
+    height: 80px;
+    background: #eee;
+    border: 1px solid #aaa;
+    padding: 5px;
+    text-align: center;
+}
+
+.update_image button {
+    color: #aaa;
+    background: #fff;
+    border: none;
+    width: 60%;
+    height: 40%;
+    cursor: pointer;
+    margin: 20px auto;
+}
+
+.profile_update .btn {
+    display: block;
+    width: 180px;
+    margin: 50px auto;
+}
+
+/* .update_block input[type="file"] {
+    height: 80px;
+} */
+
+/* .file_button::file-selector-button {
+    color: #aaa;
+    background: #fff;
+    border: none;
+    width: 60%;
+    height: 40%;
+    cursor: pointer;
+    margin: 20px auto;
+} */
+
+/* ユーザー検索画面 */
+.search_container {
+    display: flex;
+    border-bottom: 6px solid #dadada;
+    padding: 40px 50px;
+}
+
+.search_container form {
+    display: flex;
+    height: 50px;
+    width: 500px;
+}
+
+.search_container input {
+    display: block;
+    padding: 0 10px;
+    width: 300px;
+    border: 1px solid #727272;
+    border-radius: 5px;
+}
+
+.search_container img {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    border-radius: 5px;
+    margin-top: auto;
+    margin-left: 10px;
+}
+
+.search_container button {
+    background: none;
+    border: none;
+}
+
+/* ユーザー一覧 */
+.users_list {
+    width: 60%;
+    margin: 40px auto;
+}
+
+.users_list ul {
+    display: flex;
+    white-space: nowrap;
+    justify-content: center;
+}
+
+.users_list ul li {
+    margin: 20px 0px;
+}
+
+.users_list ul li p {
+    margin: 20px;
+}
+
+
+.users_list button {
+    color: #fff;
+    margin: 30px 0 30px 250px;
+    background-color: #00b3ff;
+    border: none;
+}
+
+.users_list .btn-danger {
+    background-color: #ff0044;
+}
+
+.users_list button:hover {
+    color: #000;
+    background-color: #777;
+}
+
+/*フォローリスト・フォロワーリスト*/
+.follow_container {
+    margin: 10px 0;
+}
+
+.follow_container p {
+    font-size: 1.3rem;
+}
+
+.following_post li,
+.followed_post li {
+    display: flex;
+    padding: 20px 20px 20px 80px;
+    border-bottom: 1px solid #777;
+}
+
+.following_icon,
+.followed_icon {
+    margin: 0px 30px;
 }
