--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -5,7 +5,7 @@ html {
 }
 
 body {
-    margin-top: 150px;
+    margin-top: 10%;
     background: linear-gradient(0deg, #f6cd15 0%, #1798e8 50%, #186AC9 100%);
 }
 
@@ -69,7 +69,7 @@ header p {
     margin: 10px auto;
 }
 
-.input {
+input {
     display: block;
     border: 1px solid #aaa;
     border-radius: 5px;
