--- a/public/css/logout.css
+++ b/public/css/logout.css
@@ -31,7 +31,10 @@ header p {
     letter-spacing: 1.5px;
 }
 
+/* .btn {
+    display: block;
 
+} */
 
 #container {
     color: #ffffff;
@@ -39,25 +42,25 @@ header p {
     background-color: #0000003b;
     border-radius: 10px;
     margin: 0 auto;
-    padding: 30px 20px;
+    padding: 30px 10px;
 }
 
 #container h2 {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     text-align: center;
     margin-bottom: 20px;
 }
 
 #container p {
-    font-size: 20px;
+    font-size: 1.1rem;
     text-align: center;
-    margin: 20px 0;
+    margin-bottom: 20px;
 }
 
 #container a {
     color: #ffffff;
     font-size: 1rem;
-    text-decoration: underline;
+
 }
 
 #container a:hover {
@@ -67,6 +70,20 @@ header p {
 #container form {
     width: 100%;
     margin: 10px auto;
+}
+
+#container button {
+    display: block;
+    margin: 20px 0 10px auto;
+    width: 120px;
+}
+
+.return {
+    margin-top: 40px;
+}
+
+.return a {
+    text-decoration: underline;
 }
 
 input {
@@ -79,10 +96,21 @@ input {
     justify-content: center;
 }
 
-.btn {
-    display: block;
-    margin: 20px 0 40px auto;
-    width: 120px;
+/* ログイン成功画面 */
+#clear .text {
+    margin-bottom: 30px;
+}
+
+.text>div {
+    margin-bottom: 40px;
+}
+
+#clear .btn {
+    margin-left: 25%;
+}
+
+.btn a {
+    text-decoration: none;
 }
 
 /* バリデーションのエラーメッセージ表示 */
